# kr-beneish

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.obsidian/: app.json
data/: labels.csv
docs/: calibration.md  design-decisions.md  end-to-end-run.md  index.md  korean-ifrs-adjustments.md  limitations.md
src/kr_beneish/: __init__.py  _components.py  _score.py  _validate.py  _winsorize.py  datasets.py
tests/: conftest.py  test_api.py  test_components.py  test_datasets.py  test_known_values.py  test_score.py  test_validate.py  test_winsorize.py
