[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kr-beneish"
version = "0.1.0"
description = "Beneish M-Score for Korean IFRS (KOSPI/KOSDAQ) companies"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["finance", "Korea", "KOSDAQ", "KOSPI", "forensic", "Beneish", "M-Score", "IFRS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/pon00050/kr-beneish"
Repository = "https://github.com/pon00050/kr-beneish"
Issues = "https://github.com/pon00050/kr-beneish/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kr_beneish" = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
